--- a/HaskHOL-Deductive.cabal
+++ b/HaskHOL-Deductive.cabal
@@ -16,7 +16,8 @@ homepage:      http://haskhol.org
 library
     default-language:  Haskell2010
     default-extensions: ConstraintKinds, DeriveDataTypeable, OverloadedStrings,
-                        QuasiQuotes, TemplateHaskell, TypeFamilies
+                        PatternSynonyms, QuasiQuotes, TemplateHaskell, 
+                        TypeFamilies
     build-depends:   base >= 4.7
                    , template-haskell >= 2.9
                    , pretty >= 1.1
