Changed tactic subgoal printer to match haskhol-core's new printer.

--- a/HaskHOL-Deductive.cabal
+++ b/HaskHOL-Deductive.cabal
@@ -20,7 +20,7 @@ library
                         TypeFamilies
     build-depends:   base >= 4.7
                    , template-haskell >= 2.9
-                   , pretty >= 1.1
+                   , wl-pprint-text >= 1.1
                    , haskhol-core >= 1.1
 
     exposed-modules:
