Changed GConversion net to store cachable versions of conversions rather than rebuilding it every process.  It's the best of the old/new worlds combined.

--- a/HaskHOL-Deductive.cabal
+++ b/HaskHOL-Deductive.cabal
@@ -70,8 +70,9 @@ library
       HaskHOL.Lib.Trivia.A.Base
       HaskHOL.Lib.Trivia.Base
              
-    ghc-prof-options: -prof -fprof-auto
-    ghc-options: -Wall -O2
+    ghc-prof-options: -O2 -funbox-strict-fields -Wall -fprof-cafs -fprof-auto 
+                      -rtsopts
+    ghc-options: -O2 -funbox-strict-fields -Wall
 
 source-repository head
   type: git 
